# gallery

./: .gitignore  LICENSE  _config.yml
_locgov-data/: .gitignore
_locgov-data/locgov_data/: __init__.py
_locgov-data/locgov_data/classes/: locgov.py  webarchives.py
_locgov-data/locgov_data/cli/: __main__.py
_locgov-data/locgov_data/helpers/: marcxml.py
_locgov-data/tests/resources/: p1_cli_resource_list.csv
_scripts/: eastern_ok.ipynb
locgov-data/: README.md  pydoc-markdown.yml  pyproject.toml
locgov-data/docs/: README.md
locgov-data/locgov_data/classes/: config.py
locgov-data/locgov_data/helpers/: fulltext.py  general.py  jupyter.py
locgov-data/tests/: __init__.py  test_make_request.py  test_p1_cli.py
locgov-data/tests/resources/: p1_cli_item_list.csv
scripts/: download_loc_data.py
source/_data/: eastern_ok.json
source/eastern_ok/: fsa.md  highsmith.md  sanborn.md
themes/loc/layout/: collection.ejs  layout.ejs
themes/loc/layout/_partial/: head.ejs  header.ejs
ui/source/eastern_ok/: chronam.md  hhh.md
ui/themes/loc/: _config.yml
ui/themes/loc/source/css/: main.css
ui/themes/loc/source/js/: main.js
